feat(backend): Add ROLE_USER, structured logs, and metrics to OTP login (refs #40)
Co-authored-by: vemikrs <17517874+vemikrs@users.noreply.github.com>